# llama_rag_toy

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt  starter.py
data/: good_omens.txt  zarathustra.txt
static/: chat.js  styles.css
templates/: chat.html
