[tool.poetry]
name = "llama-rag-toy"
version = "0.1.0"
description = ""
authors = ["IgorDiamandi <161752477+IgorDiamandi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.11.19"
flask = "^3.0.3"
markupsafe = "^3.0.2"
python-dotenv = "^1.0.1"
transformers = "^4.46.0"
torch = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
